--- a/Whatsapp Automation/multi-add-to-new-group/multi-add-to-new-group.ipynb
+++ b/Whatsapp Automation/multi-add-to-new-group/multi-add-to-new-group.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -16,35 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ZZZZ2', 'ZZZZ3', 'ZZZZ4', 'ZZZZ5']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "contacts = pd.read_csv('contacts.csv', usecols = [0])\n",
+    "contacts = pd.read_csv('IIEC.csv', usecols = [0])\n",
     "contacts = contacts.set_index('Name').T\n",
     "#print([name for name in contacts])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of group you want to create : Group-45\n"
+     ]
+    }
+   ],
    "source": [
     "groupname = input('Enter the name of group you want to create : ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,12 @@
     "driver.get('https://web.whatsapp.com/')\n",
     "\n",
     "#Depends on internet speed - time it takes to load the webpage\n",
-    "time.sleep(5) #For 5 seconds"
+    "#time.sleep(5) #For 5 seconds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,22 @@
     "#Press on \"Create Group\" Button\n",
     "driver.find_element_by_class_name('_1g8sv').click()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#AGAR ZZZZ5 naa mille toh usse skip karke aage badho "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
