Website random push

--- a/Whatsapp Automation/multi-add-to-new-group/multi-add-to-new-group.ipynb
+++ b/Whatsapp Automation/multi-add-to-new-group/multi-add-to-new-group.ipynb
@@ -20,24 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contacts = pd.read_csv('IIEC.csv', usecols = [0])\n",
+    "contacts = pd.read_csv('contacts.csv', usecols = [0])\n",
     "contacts = contacts.set_index('Name').T\n",
     "#print([name for name in contacts])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the name of group you want to create : Group-45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "groupname = input('Enter the name of group you want to create : ')"
    ]
@@ -81,6 +73,8 @@
     "    driver.find_element_by_class_name('_44uDJ').send_keys(names)\n",
     "    #Press Enter\n",
     "    driver.find_element_by_class_name(\"_44uDJ\").send_keys(Keys.RETURN)\n",
+    "    #Necessary backspace \n",
+    "    driver.find_element_by_class_name(\"_44uDJ\").clear()\n",
     "\n",
     "#CLICK to ADD all the CONTACTS to the GROUP    \n",
     "driver.find_element_by_class_name('_1g8sv').click()\n",
